Refactoring and name changing

--- a/test/tests.html
+++ b/test/tests.html
@@ -9,7 +9,7 @@
     <script src="mocha.js"></script>
     <script src="../build/build.js"></script>
     <script>mocha.setup('bdd')</script>
-    <script src="keycode.js"></script>
+    <script src="spn.js"></script>
     <script>
       mocha.run();
     </script>
