--- a/examples/index.html
+++ b/examples/index.html
@@ -2,12 +2,12 @@
 <div id="keyname">Press any key.</div>
 <script src="../build/build.js"></script>
 <script>
-  var keycode = require('keycode')
-  window.keycode =  keycode
-  console.log("The keyCode for 'Enter' is %d.", keycode('Enter'))
+  var spn = require('shortcut-picker-nwjs');
+  window.spn = spn;
+  console.log("The shortcut-picker-nwjs for 'Enter' is %d.", spn('Enter'));
   window.addEventListener('keydown', keydown);
   function keydown(e) {
     document.getElementById('keyname').innerHTML = (e.which ||
-      e.keyCode) + ': ' + keycode(e.which || e.keyCode);
+      e.spn) + ': ' + spn(e.which || e.spn);
   }
 </script>
